fixed footer spacing

--- a/style.css
+++ b/style.css
@@ -176,11 +176,12 @@ footer {
   font-family: Verdana;
   font-size: 12px;
   display: flex;
-  height: 300px;
+  height: 250px;
   flex-flow: row wrap;
   align-content: center;
   justify-content: center;
   flex-flow: row wrap;
+  margin-top: 100px;
 }
 
 .name {
